# ChessGame

./: CMakeLists.txt  README.md
SDL2-2.26.2/cmake/: sdl2_image-config-version.cmake  sdl2_image-config.cmake
SDL2-2.26.2/x86_64-w64-mingw32/include/SDL2/: SDL_filesystem.h  SDL_keycode.h
assets/: scr_background.xcf
assets/char/: letter.xcf
assets/chessSet/: README
include/: Board.h  Game.h  Historic.h  Piece.h  Plateau.h  Player.h
include/Window/: BoardWidget.h  Button.h  EventHandler.h  HistoricWidget.h  Rectangle.h  ScrollableWidget.h  Widget.h  Window.h  stb_image.h
src/: Board.cpp  Game.cpp  Historic.cpp  Piece.cpp  main.cpp
src/Window/: BoardWidget.cpp  Button.cpp  EventHandler.cpp  HistoricWidget.cpp  Rectangle.cpp  ScrollableWidget.cpp  Widget.cpp  Window.cpp
